# c_client_server

./: CMakeLists.txt  client.c  readme.md  server.c
